--- a/core.html
+++ b/core.html
@@ -552,8 +552,8 @@ $(function() {
 				
 
 				index.add({
-					"title": "Media conditional modifiers",
-					"breadcrumb": "Modifiers > Media conditional modifiers",
+					"title": "Media-conditional modifiers",
+					"breadcrumb": "Modifiers > Media-conditional modifiers",
 					"path": "modifiers.html#mediaMod"
 				});
 
@@ -690,9 +690,9 @@ $(function() {
 				
 
 				index.add({
-					"title": "capitalizeFirstLetter",
-					"breadcrumb": "Sass Utilities > capitalizeFirstLetter",
-					"path": "sass_utilities.html#capitalizeFirstLetter"
+					"title": "str-capitalizeFirstLetter",
+					"breadcrumb": "Sass Utilities > str-capitalizeFirstLetter",
+					"path": "sass_utilities.html#str-capitalizeFirstLetter"
 				});
 
 			
