--- a/ui_components.html
+++ b/ui_components.html
@@ -249,8 +249,8 @@ $(function() {
 				
 
 				index.add({
-					"title": "Media conditional modifiers",
-					"breadcrumb": "Modifiers > Media conditional modifiers",
+					"title": "Media-conditional modifiers",
+					"breadcrumb": "Modifiers > Media-conditional modifiers",
 					"path": "modifiers.html#mediaMod"
 				});
 
@@ -387,9 +387,9 @@ $(function() {
 				
 
 				index.add({
-					"title": "capitalizeFirstLetter",
-					"breadcrumb": "Sass Utilities > capitalizeFirstLetter",
-					"path": "sass_utilities.html#capitalizeFirstLetter"
+					"title": "str-capitalizeFirstLetter",
+					"breadcrumb": "Sass Utilities > str-capitalizeFirstLetter",
+					"path": "sass_utilities.html#str-capitalizeFirstLetter"
 				});
 
 			
