--- a/core.html
+++ b/core.html
@@ -192,6 +192,24 @@ padding, and sets a max-width.</p>
     <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/section&gt;</span>
 </pre></div></div></div>
+<h4>Bounds variants</h4>
+
+<table><thead>
+<tr>
+<th>Class</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>.bounds</code></td>
+<td>standard bounds for any type of content</td>
+</tr>
+<tr>
+<td><code>.bounds--form</code></td>
+<td>bounds for wrapping forms; applies narrower measure</td>
+</tr>
+</tbody></table>
+
 <h2 id="flexRow">Flex row</h2>
 
 <p>Arranges content in rows using <code>display: flex</code>.</p>
