--- a/ui_components.html
+++ b/ui_components.html
@@ -117,6 +117,8 @@
 <span class="nt">&lt;/ul&gt;</span>
 </pre></div></div></div>
 <h1 id="buttons">Buttons</h1>
+
+<h4>Example</h4>
 <div class="codeExample"><div class="exampleOutput"><a class="button" href="#">Button</a>
 <a class="button button--primary" href="#">Primary Button</a>
 <a class="button button--bordered" href="#">Bordered Button</a>
@@ -140,6 +142,39 @@
 <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"button button--small"</span> <span class="na">href=</span><span class="s">"#"</span><span class="nt">&gt;</span>Small Button<span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"button button--bordered button--fullWidth"</span> <span class="na">href=</span><span class="s">"#"</span><span class="nt">&gt;</span>Full width button<span class="nt">&lt;/a&gt;</span>
 </pre></div></div></div>
+<h4>Button variants</h4>
+
+<p>A class of <code>.button</code> is <strong>required</strong> for buttons. The following
+classes are optional variants:</p>
+
+<table><thead>
+<tr>
+<th>Class</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code>.button--primary</code></td>
+<td>rounded button with dark background; for primary actions</td>
+</tr>
+<tr>
+<td><code>.button--contrast</code></td>
+<td>bold, dark text; use on dark backgrounds (ie. top nav bar)</td>
+</tr>
+<tr>
+<td><code>.button--bordered</code></td>
+<td>rounded bordered button</td>
+</tr>
+<tr>
+<td><code>.button--icon</code></td>
+<td>cirular icon above caption text (see example above)</td>
+</tr>
+<tr>
+<td><code>.button--small</code></td>
+<td>decreases size of button</td>
+</tr>
+</tbody></table>
+
 <h1 id="togglePills">Toggle Pills</h1>
 <div class="codeExample"><div class="exampleOutput"><div class="toggle-button-wrapper">
     <input type="checkbox" name="topic-pill" id="topic-pill" value="ToggleBtn">
