--- a/modifiers.html
+++ b/modifiers.html
@@ -28,7 +28,7 @@
 	</header>
 
 	<section id="hologramBody" class="bounds flexRow display--block--mediumDown">
-		<nav class="flexrow-item--shrink display--block--mediumDown">
+		<nav class="flexrow-item--shrink display--block--mediumDown padding--none--mediumDown">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -162,7 +162,7 @@
 			</ul>
 		</nav>
 
-		<main id="content" class="flexRow-item--grow display--block--mediumDown">
+	 	<main id="content" class="flexRow-item--grow display--block--mediumDown padding--none--mediumDown">
 <h1 id="alignMod">Alignment</h1>
 
 <p>Modifies text-align property of element</p>
@@ -314,6 +314,7 @@ a modification at a specific breakpoint.</p>
 <li><code>.align--[ center | right | left ]--[ small | medium | large ][ Up | Down | Only ]</code></li>
 <li><code>.display--[ none | inline | inlineBlock | block ]--[ small | medium | large ][ Up | Down | Only ]</code></li>
 <li><code>.border--[ none | top ]--[ small | medium | large ][ Up | Down | Only ]</code></li>
+<li><code>.padding--none--[ small | medium | large ][ Up | Down | Only ]</code></li>
 </ul>
 
 <p>Example TK</p>
