--- a/ui_components.html
+++ b/ui_components.html
@@ -28,7 +28,7 @@
 	</header>
 
 	<section id="hologramBody" class="bounds flexRow display--block--mediumDown">
-		<nav class="flexrow-item--shrink display--block--mediumDown">
+		<nav class="flexrow-item--shrink display--block--mediumDown padding--none--mediumDown">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -94,7 +94,7 @@
 			</ul>
 		</nav>
 
-		<main id="content" class="flexRow-item--grow display--block--mediumDown">
+	 	<main id="content" class="flexRow-item--grow display--block--mediumDown padding--none--mediumDown">
 <h1 id="avatar">Avatar</h1>
 <div class="codeExample"><div class="exampleOutput"><ul class="inlineblockList">
     <li>
