--- a/sass_utilities.html
+++ b/sass_utilities.html
@@ -28,7 +28,7 @@
 	</header>
 
 	<section id="hologramBody" class="bounds flexRow display--block--mediumDown">
-		<nav class="flexrow-item--shrink display--block--mediumDown">
+		<nav class="flexrow-item--shrink display--block--mediumDown padding--none--mediumDown">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -221,7 +221,7 @@
 			</ul>
 		</nav>
 
-		<main id="content" class="flexRow-item--grow display--block--mediumDown">
+	 	<main id="content" class="flexRow-item--grow display--block--mediumDown padding--none--mediumDown">
 <h1 id="functions">Sass Functions</h1>
 
 <h2 id="brightness">Contrast/brightness utils</h2>
