--- a/sass_utilities.html
+++ b/sass_utilities.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Sassquatch 2 : Sass Utilities</title>
 
