--- a/pages/full-view.html
+++ b/pages/full-view.html
@@ -20,13 +20,13 @@
 <body>
 	<div class="view">
 		<header class="view-head row">
-			<div class="row-item--shrink">
+			<div class="row-item row-item--shrink row-item--alignMiddle">
 				<h1>...<h1>
 			</div>
-			<div class="row-item align--center wrap--singleLine--truncate">
+			<div class="row-item row-item--alignMiddle align--center wrap--singleLine--truncate">
 				<h1>Full view example</h1>
 			</div>
-			<div class="row-item--shrink">
+			<div class="row-item row-item--shrink row-item--alignMiddle">
 				<h1>...<h1>
 			</div>
 		</header>
