--- a/pages/full-view.html
+++ b/pages/full-view.html
@@ -41,45 +41,45 @@
 			<section class="stripe">
 				<div class="bounds">
 
-					<div class="group">
+					<div class="chunk">
 						<h2>I have a list of things</h2>
 						<p>You should try resizing the browser and scrolling.</p>
 					</div>
 
 					<ul class="list">
 						<li class="row">
-							<div class="row-item--shrink group">
+							<div class="row-item row-item--shrink chunk">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
 							</div>
-							<div class="row-item group">
+							<div class="row-item chunk">
 								<h3>Eggs</h3>
 								<p>Have some eggs.</p>
 							</div>
-							<div class="row-item--shrink group">
+							<div class="row-item row-item--shrink chunk">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
 						<li class="row">
-							<div class="row-item--shrink group">
+							<div class="row-item--shrink chunk">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
 							</div>
-							<div class="row-item group">
+							<div class="row-item chunk">
 								<h3>More eggs</h3>
 								<p>Have some more eggs.</p>
 							</div>
-							<div class="row-item--shrink group">
+							<div class="row-item--shrink chunk">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
 						<li class="row">
-							<div class="row-item--shrink group">
+							<div class="row-item--shrink chunk">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
 							</div>
-							<div class="row-item group">
+							<div class="row-item chunk">
 								<h3>Even more eggs</h3>
 								<p>Have even more eggs.</p>
 							</div>
-							<div class="row-item--shrink group">
+							<div class="row-item--shrink chunk">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
@@ -90,14 +90,14 @@
 			<section class="stripe--inverted inverted">
 				<div class="bounds">
 
-					<div class="group">
-						<h2>I'm in a group</h2>
-						<p>just a content group here, nothing too special.</p>
+					<div class="chunk">
+						<h2>I'm in a chunk</h2>
+						<p>just a content chunk here, nothing too special.</p>
 					</div>
 
-					<div class="group">
-						<h2>I'm in a group</h2>
-						<p>just a content group here, nothing too special.</p>
+					<div class="chunk">
+						<h2>I'm in a chunk</h2>
+						<p>just a content chunk here, nothing too special.</p>
 					</div>
 
 				</div>
