--- a/core.html
+++ b/core.html
@@ -449,11 +449,11 @@ grid.</p>
 </tr>
 <tr>
 <td><code>.atMedium_gridList--has[n]</code></td>
-<td>Sets number of columns for medium breakpoint and up (ie. <code>.atMedium_gridList--has[6]</code>)</td>
+<td>Sets number of columns for medium breakpoint and up (ie. <code>.atMedium_gridList--has6</code>)</td>
 </tr>
 <tr>
 <td><code>.atLarge_gridList--has[n]</code></td>
-<td>Sets number of columns for large breakpoint and up (ie. <code>.atLarge_gridList--has[10]</code>)</td>
+<td>Sets number of columns for large breakpoint and up (ie. <code>.atLarge_gridList--has10</code>)</td>
 </tr>
 </tbody></table>
 
