--- a/pages/full-view.html
+++ b/pages/full-view.html
@@ -23,7 +23,7 @@
 			<div class="row-item row-item--shrink row-item--alignMiddle">
 				<h1>...<h1>
 			</div>
-			<div class="row-item row-item--alignMiddle align--center wrap--singleLine--truncate">
+			<div class="row-item row-item--alignMiddle wrap--singleLine--truncate">
 				<h1>Full view example</h1>
 			</div>
 			<div class="row-item row-item--shrink row-item--alignMiddle">
