--- a/modifier_classes.html
+++ b/modifier_classes.html
@@ -1088,6 +1088,16 @@ $(function() {
 				});
 
 			
+				
+				
+
+				index.add({
+					"title": "Hero Stripes",
+					"breadcrumb": "Layout > Hero Stripes",
+					"path": "layout.html#heroStripes"
+				});
+
+			
 		
 	
 		
