--- a/ui_components.html
+++ b/ui_components.html
@@ -1222,6 +1222,16 @@ $(function() {
 				});
 
 			
+				
+				
+
+				index.add({
+					"title": "Hero Stripes",
+					"breadcrumb": "Layout > Hero Stripes",
+					"path": "layout.html#heroStripes"
+				});
+
+			
 		
 	
 		
