--- a/views.html
+++ b/views.html
@@ -904,6 +904,16 @@ $(function() {
 				});
 
 			
+				
+				
+
+				index.add({
+					"title": "Hero Stripes",
+					"breadcrumb": "Layout > Hero Stripes",
+					"path": "layout.html#heroStripes"
+				});
+
+			
 		
 	
 		
