--- a/sass_utils_|_mixins_&_placeholders.html
+++ b/sass_utils_|_mixins_&_placeholders.html
@@ -1146,6 +1146,16 @@ $(function() {
 				});
 
 			
+				
+				
+
+				index.add({
+					"title": "Hero Stripes",
+					"breadcrumb": "Layout > Hero Stripes",
+					"path": "layout.html#heroStripes"
+				});
+
+			
 		
 	
 		
