--- a/typography.html
+++ b/typography.html
@@ -995,6 +995,16 @@ $(function() {
 				});
 
 			
+				
+				
+
+				index.add({
+					"title": "Hero Stripes",
+					"breadcrumb": "Layout > Hero Stripes",
+					"path": "layout.html#heroStripes"
+				});
+
+			
 		
 	
 		
