--- a/pages/full-view.html
+++ b/pages/full-view.html
@@ -21,13 +21,13 @@
 	<div class="view">
 		<header class="view-head row">
 			<div class="row-item row-item--shrink row-item--alignMiddle">
-				<h1>...<h1>
+				<h1>...</h1>
 			</div>
 			<div class="row-item row-item--alignMiddle wrap--singleLine--truncate">
 				<h1>Full view example</h1>
 			</div>
 			<div class="row-item row-item--shrink row-item--alignMiddle">
-				<h1>...<h1>
+				<h1>...</h1>
 			</div>
 		</header>
 		<main class="view-body">
@@ -49,7 +49,7 @@
 					<ul class="list">
 						<li class="row">
 							<div class="row-item row-item--shrink">
-								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
+								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);">egg avatar</a>
 							</div>
 							<div class="row-item">
 								<h3>Eggs</h3>
