--- a/modifier_classes.html
+++ b/modifier_classes.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 	<title>Sassquatch 2 : Modifier Classes</title>
@@ -19,7 +20,11 @@
 	<link rel="stylesheet" href="css/sassquatch.css">
 </head>
 
-<body>
+<!--[if IE 8]> <body class="ieRoot_IE8 ieRoot_lt_IE9 ieRoot_lt_IE10"> <![endif]-->
+<!--[if IE 9]> <body class="ieRoot_IE9 ieRoot_lt_IE10"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
+
+	<!-- HOTDOGS -->
 	<header class="stripe--inverted inverted">
 		<div class="bounds bounds--wide">
 			<h1 class="text--display">Sassquatch 2</h1>
@@ -27,8 +32,8 @@
 		</div>
 	</header>
 
-	<section id="hologramBody" class="bounds bounds--wide stack atMedium_stack--spread">
-		<nav class="stack-item" style="max-width: 260px;">
+	<section id="hologramBody" class="bounds bounds--wide">
+		<nav id="navigation">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -182,7 +187,7 @@
 			</ul>
 		</nav>
 
-	 	<main id="content" class="stack-item">
+	 	<main id="content">
 <h1 id="alignMod">Alignment</h1>
 
 <p>Modifies text-align property of element</p>
@@ -282,7 +287,7 @@ and overflow hidden.</p>
 <td>sets <code>display</code> to <code>inline</code></td>
 </tr>
 <tr>
-<td><code>.display--inlineblock</code></td>
+<td><code>.display--inlineBlock</code></td>
 <td>sets <code>display</code> to <code>inlineblock</code></td>
 </tr>
 </tbody></table>
