--- a/pages/full-view.html
+++ b/pages/full-view.html
@@ -53,38 +53,38 @@
 
 					<ul class="list">
 						<li class="row">
-							<div class="row-item row-item--shrink">
+							<div class="chunk row-item row-item--shrink">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);">egg avatar</a>
 							</div>
-							<div class="row-item">
+							<div class="chunk row-item">
 								<h3 class="text--bold">Eggs</h3>
 								<p>Have some eggs.</p>
 							</div>
-							<div class="row-item row-item--shrink">
+							<div class="chunk row-item row-item--shrink">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
 						<li class="row">
-							<div class="row-item--shrink">
+							<div class="chunk row-item--shrink">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
 							</div>
-							<div class="row-item">
+							<div class="chunk row-item">
 								<h3 class="text--bold">More eggs</h3>
 								<p>Have some more eggs.</p>
 							</div>
-							<div class="row-item--shrink">
+							<div class="chunk row-item--shrink">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
 						<li class="row">
-							<div class="row-item--shrink">
+							<div class="chunk row-item--shrink">
 								<a href="#" class="avatar avatar--person" style="background-image: url(http://hostedmedia.reimanpub.com/TOH/Images/Photos/37/300x300/exps29222_W101973175C05_17_2bC.jpg);"></a>
 							</div>
-							<div class="row-item">
+							<div class="chunk row-item">
 								<h3 class="text--bold">Even more eggs</h3>
 								<p>Have even more eggs.</p>
 							</div>
-							<div class="row-item--shrink">
+							<div class="chunk row-item--shrink">
 								<a class="button button--primary">Just Yolkin'</a>
 							</div>
 						</li>
