--- a/ui_components.html
+++ b/ui_components.html
@@ -28,7 +28,7 @@
 	<header class="stripe--inverted inverted">
 		<div class="bounds bounds--wide">
 			<h1 class="text--display">Sassquatch 2</h1>
-			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.0</a>
+			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.1</a>
 		</div>
 	</header>
 
@@ -996,6 +996,16 @@ $(function() {
 					"title": "Media Sizing",
 					"breadcrumb": "Modifier Classes > Media Sizing",
 					"path": "modifier_classes.html#sizeMod"
+				});
+
+			
+				
+				
+
+				index.add({
+					"title": "Margin/Padding",
+					"breadcrumb": "Modifier Classes > Margin/Padding",
+					"path": "modifier_classes.html#spacingMod"
 				});
 
 			
