--- a/layout.html
+++ b/layout.html
@@ -28,7 +28,7 @@
 	<header class="stripe--inverted inverted">
 		<div class="bounds bounds--wide">
 			<h1 class="text--display">Sassquatch 2</h1>
-			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.1</a>
+			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.2</a>
 		</div>
 	</header>
 
@@ -251,7 +251,7 @@ padding, and sets a max-width.</p>
 
 <p>The <code>bounds--sideHeader</code> variant applies styles to accommodate a
 <code>bounds-header</code> element. A <code>bounds-header</code> is pulled to the left side
-of the bounds on wide screens, and linearizes on small screens.</p>
+of the bounds on wide screens (<code>large</code> breakpoint), and linearizes on small screens (less than <code>large</code>).</p>
 <div class="codeExample"><div class="exampleOutput">    <section class="stripe">
         <div class="bounds bounds--sideHeader">
 
