--- a/forms.html
+++ b/forms.html
@@ -28,12 +28,12 @@
 	<header class="stripe--inverted inverted">
 		<div class="bounds bounds--wide">
 			<h1 class="text--display">Sassquatch 2</h1>
-			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.2</a>
+			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.9.0</a>
 		</div>
 	</header>
 
-	<section id="hologramBody" class="bounds bounds--wide">
-		<nav id="navigation">
+	<section id="hologramBody" class="bounds bounds--wide stack atLarge_stack--spread">
+		<nav id="navigation" class="stack-item stack-item--shrink">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -128,7 +128,7 @@
 			</ul>
 		</nav>
 
-	 	<main id="content">
+	 	<main id="content" class="stack-item">
 <h1 id="checkbox">Checkboxes</h1>
 
 <p>A label variant class of <code>label--switch</code> is
