--- a/modifier_classes.html
+++ b/modifier_classes.html
@@ -28,12 +28,12 @@
 	<header class="stripe--inverted inverted">
 		<div class="bounds bounds--wide">
 			<h1 class="text--display">Sassquatch 2</h1>
-			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.7.2</a>
+			<a href="https://github.com/meetup/sassquatch2/releases" class="followLink software-version">v0.9.0</a>
 		</div>
 	</header>
 
-	<section id="hologramBody" class="bounds bounds--wide">
-		<nav id="navigation">
+	<section id="hologramBody" class="bounds bounds--wide stack atLarge_stack--spread">
+		<nav id="navigation" class="stack-item stack-item--shrink">
 			<ul>
 				
 					<li class="display--inlineBlock--mediumDown">
@@ -205,7 +205,7 @@
 			</ul>
 		</nav>
 
-	 	<main id="content">
+	 	<main id="content" class="stack-item">
 <h1 id="alignMod">Alignment</h1>
 
 <p>Modifies text-align property of element.</p>
@@ -385,7 +385,8 @@ javascript on page load</em></p>
 
 <h1 id="keepAspect">Aspect ratio helper</h1>
 
-<p>Maintains a given aspect ratio for flexible media.</p>
+<p>Maintains a given aspect ratio for flexible media.
+Apply to elements with background images.</p>
 
 <table><thead>
 <tr>
@@ -404,6 +405,10 @@ javascript on page load</em></p>
 <tr>
 <td><code>.keepAspect--2-1</code></td>
 <td>maintains 2-1 aspect ratio when resized</td>
+</tr>
+<tr>
+<td><code>.keepAspect--2-3</code></td>
+<td>maintains 2-3 aspect ratio when resized</td>
 </tr>
 </tbody></table>
 
